--- a/Source/static/css/new_analyse.css
+++ b/Source/static/css/new_analyse.css
@@ -59,17 +59,34 @@ span.toggle-handle.btn.btn-default {
     margin-right: auto;
 }
 
+#results_div {
+    min-height: 500px;
+}
+
+#statistics_table_div {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #SetupHeader .run-button {
     margin-left: auto;
 }
 
 #AnalyseContent table td .status {
     font-size: 3rem;
-    padding-left: 20px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    min-height: 100px;
 }
 
-#AnalyseContent table td .center-spinner {
-    margin: 30px;
+#AnalyseContent table td {
+    text-align: center;
+    vertical-align: middle;
+}
+
+#AnalyseContent table td:nth-child(-n+4) {
+    font-size: 1.5rem;
 }
 
 select[multiple] {
