--- a/Source/templates/new_analyse.html
+++ b/Source/templates/new_analyse.html
@@ -1,7 +1,8 @@
 {% extends "layout.html"%} {%block css%}
-<link rel="stylesheet" href="../static/css/new_analyse.css"> {%endblock%} {%block content%}
+<link rel="stylesheet" href="../static/css/new_analyse.css">
 <link rel="stylesheet" href="../static/css/bootstrap-toggle.min.css">
-<script src="../static/js/bootstrap-toggle.min.js"></script>
+<script src="../static/js/bootstrap-toggle.min.js"></script> {%endblock%} {%block content%}
+
 <div class="card">
     <div id="SetupHeader" class="card-header">
         <h2>Setup</h2>
@@ -10,10 +11,11 @@
             <input id="setup_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
             <input id="setup_name" type="text" class="form-control normal-margin col-2">
             <datalist id="setups_datalist"></datalist>
+            <h4 class="ml-4" id="curr_setup_name"></h4>
             <div id="statistics_text" class="row statistics-div col-5 normal-margin">
                 0 functions on 0 runs : 0 tests
             </div>
-            <button class="btn btn-primary normal-margin run-button">
+            <button id="run_setup_button" class="btn btn-primary normal-margin run-button">
                 Run
             </button>
         </div>
@@ -113,21 +115,22 @@
 <div class="card">
     <div id="AnalyseMIssionHeader" class="card-header">
         <h2>Analyse Mission</h2>
-        <h4><span class="badge badge-success">75% Completed</span></h4>
+        <h4><span class="badge badge-success" id="progress_text">75% Completed</span></h4>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+            <div id="progress_bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
             </div>
         </div>
         <div class="flex-container mt-2">
             <button id="collapse_analyse_button" class="collapse-button" data-toggle="collapse" data-target="#AnalyseContent"><i class="far fa-plus-square"></i></button>
             <h4>Mission Name</h4>
-            <input type="text" class="form-control normal-margin col-2" value="Setup_Name123">
-            <button id="display_mission" class="btn btn-outline-success">Display</button>
+            <input list="mission_names_datalist" id="mission_name" type="text" class="form-control normal-margin col-2" value="Setup_Name123">
+            <datalist id="mission_names_datalist"></datalist>
+            <button id="display_mission" class="btn btn-outline-success" hidden="true">Display</button>
             <div id="statistics_div" class="row statistics-div col-5 normal-margin">
                 20 functions on 10 runs : 140/200 completed
             </div>
 
-            <button class="btn btn-primary normal-margin run-button">
+            <button id="run_status" class="btn btn-primary normal-margin run-button">
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 &nbsp; Running...
             </button>
@@ -151,14 +154,15 @@
                 </table>
             </div>
             <div id="statistics_table_div" class="statistics" hidden="hidden">
-                some chart
-                <!-- <table id="results_table" class="table table-striped table-bordered" style="width:100%">
-                </table> -->
+                <canvas hidden="hidden" id="statistics_chart"></canvas>
             </div>
         </div>
     </div>
 </div>
 <br><br> {% endblock %} {%block scripts%}
+<script src="../static/js/AnalyseWorker.js"></script>
 <script src="../static/js/new_analyse_tables.js"></script>
 <script src="../static/js/new_analyse_setup.js"></script>
+<script src="../static/js/new_analyse_display.js"></script>
+<script src="../static/js/new_analyse_charts.js"></script>
 {% endblock %}
